--- a/client/src/pages/home/home.html
+++ b/client/src/pages/home/home.html
@@ -7,8 +7,7 @@
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  <button ion-button (click)="goToEnrollPage()">
+    Enroll
+  </button>
 </ion-content>
