--- a/client/src/pages/home/home.html
+++ b/client/src/pages/home/home.html
@@ -1,13 +1,11 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      HeartSteps
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <button ion-button (click)="goToEnrollPage()">
-    Enroll
-  </button>
+  This is a dashboard...
 </ion-content>
