Added firebase web messaging

--- a/client/src/pages/home/home.html
+++ b/client/src/pages/home/home.html
@@ -8,4 +8,5 @@
 
 <ion-content padding>
   This is a dashboard...
+  <button ion-button (click)="getToken()">Start notifications</button>
 </ion-content>
