Onboarding uses internal ion-nav

--- a/client/src/pages/onboard/onboard.html
+++ b/client/src/pages/onboard/onboard.html
@@ -5,25 +5,10 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
   <ion-navbar>
     <ion-title>Onboarding</ion-title>
   </ion-navbar>
-
 </ion-header>
-
 <ion-content padding>
-  <ion-slides #slides>
-    <ion-slide>
-      <h2>Set up HeartSteps</h2>
-      <p>The following pages are meant to get HeartSteps set up. Once your HeartSteps settings have been completed, you will never see this page again.</p>
-      <button ion-button (click)="next()">Next</button>
-    </ion-slide>
-    <ion-slide>
-      <h2>Recieve Notifications</h2>
-      <notifications-screen></notifications-screen>
-    </ion-slide>
-
-  </ion-slides>
-
+  <ion-nav></ion-nav>
 </ion-content>
