Pretty sure this already got commited

--- a/client/src/pages/home/home.html
+++ b/client/src/pages/home/home.html
@@ -7,5 +7,6 @@
 </ion-header>
 
 <ion-content padding>
-  This is a dashboard...
+  <p>This is a dashboard</p>
+  <button ion-button (click)="createDecision()">Start a decision</button>
 </ion-content>
