Restructured onboarding pages

--- a/client/src/pages/onboard/notifications.html
+++ b/client/src/pages/onboard/notifications.html
@@ -1,2 +1,9 @@
-<p>Allow notifications so HeartSteps can send you activity suggestions and reminders.</p>
-<button ion-button (click)="getPermission()">Enable</button>
+<ion-header>
+    <ion-navbar>
+        <ion-title>Notifications</ion-title>
+    </ion-navbar>
+</ion-header>
+<ion-content padding>
+    <p>Allow notifications so HeartSteps can send you activity suggestions and reminders.</p>
+    <button ion-button (click)="getPermission()">Enable</button>
+</ion-content>
