--- a/client/src/pages/enroll/enroll.html
+++ b/client/src/pages/enroll/enroll.html
@@ -1,9 +1,3 @@
-<!--
-  Generated template for the EnrollPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
@@ -14,16 +8,13 @@
 
 
 <ion-content padding>
-  <p>Enter in your enrollment token below.</p>
-  <div *ngIf="error">
-      <p>The enrollment token you entered has either already been enrolled or isn't correct.</p>
-      <p>If you have previsously enrolled for HeartSteps, please login.</p>
-    </div>
-  <form (ngSubmit)="enroll()" >
+  <p>Enter the entry token included in the invitation letter you received in the mail.</p>
+  <form [formGroup]="enrollmentForm" (ngSubmit)="enroll()" >
     <ion-item>
-      <ion-label>Entrollment Token</ion-label>
-      <ion-input type="text" [(ngModel)]="enrollmentToken" name="enrollmentToken"></ion-input>
+      <ion-label stacked>Entry Code</ion-label>
+      <ion-input type="text" formControlName="entryToken" required></ion-input>
     </ion-item>
+    <p *ngIf="error" class="error">The entry token you entered has either already been enrolled or isn't correct.</p><ion-icon name="alert"></ion-icon>
     <button ion-button>Enroll</button>
   </form>
 </ion-content>
