Add styles for alternative-background

--- a/client/src/pages/welcome/welcome.html
+++ b/client/src/pages/welcome/welcome.html
@@ -1,6 +1,7 @@
-<ion-content padding>
-  <h1>HeartSteps</h1>
-  <button ion-button (click)="goToEnrollPage()">
+<ion-content class="alternate-background" padding>
+  <h1>Welcome!</h1>
+  <p>Enroll to create your account and get started.</p>
+  <button (click)="goToEnrollPage()">
       Enroll
   </button>
 </ion-content>
