--- a/client/src/pages/enroll/enroll.html
+++ b/client/src/pages/enroll/enroll.html
@@ -15,6 +15,6 @@
       <ion-input type="text" formControlName="entryToken" required></ion-input>
     </ion-item>
     <p *ngIf="error" class="error">The entry token you entered has either already been enrolled or isn't correct.</p><ion-icon name="alert"></ion-icon>
-    <button ion-button>Enroll</button>
+    <button>Enroll</button>
   </form>
 </ion-content>
