--- a/client/src/pages/onboard/onboard-end.html
+++ b/client/src/pages/onboard/onboard-end.html
@@ -1,3 +1,5 @@
-<p>You have completed the onboarding process.</p>
-<p>Please take the next few minutes to look at the pretty dashboard.</p>
-<button ion-button (click)="finishOnboarding()">Done</button>
+<ion-content>
+    <p>You have completed the onboarding process.</p>
+    <p>Please take the next few minutes to look at the pretty dashboard.</p>
+    <button ion-button (click)="finishOnboarding()">Done</button>
+</ion-content>
