--- a/client/src/pages/onboard/onboard.html
+++ b/client/src/pages/onboard/onboard.html
@@ -4,5 +4,5 @@
   </ion-navbar>
 </ion-header>
 <ion-content padding>
-  <ion-nav></ion-nav>
+  <ion-nav class="onboarding-nav"></ion-nav>
 </ion-content>
