Restructuring onboarding for meaningful page changes

--- a/client/src/pages/onboard/onboard-end.html
+++ b/client/src/pages/onboard/onboard-end.html
@@ -1,5 +1,9 @@
 <ion-content>
-    <p>You have completed the onboarding process.</p>
-    <p>Please take the next few minutes to look at the pretty dashboard.</p>
+    <ion-list>
+        <button ion-item>Notifications Enabled</button>
+        <button ion-item>Activity Suggestion Times</button>
+        <button ion-item>Location Permission</button>
+        <button ion-item>Location Settings</button>
+    </ion-list>
     <button ion-button (click)="finishOnboarding()">Done</button>
 </ion-content>
