--- a/client/src/pages/settings/activity-suggestion-times.html
+++ b/client/src/pages/settings/activity-suggestion-times.html
@@ -3,11 +3,16 @@
         <ion-title>Activity Suggestion Times</ion-title>
     </ion-navbar>
 </ion-header>
+
 <ion-content padding>
     <p>Enter times of day when you might recieve an activity suggestion.</p>
-    <ion-item *ngFor="let time of timeFields">
-        <ion-label>{{time.name}}</ion-label>
-        <ion-datetime displayFormat="h:mm a" minuteValues="0,15,30,45" [(ngModel)]="times[time.key]"></ion-datetime>
-    </ion-item>
-    <button ion-button (click)="updateTimes()">Enable</button>
+    <div *ngIf="timesForm">
+        <form [formGroup]="timesForm">
+            <ion-item *ngFor="let time of timeFields">
+                <ion-label>{{time.name}}</ion-label>
+                <ion-datetime formControlName="{{time.key}}" displayFormat="h:mm a" minuteValues="0,30"></ion-datetime>
+            </ion-item>
+            <button ion-button (click)="updateTimes()">Save</button>
+        </form>
+    </div>
 </ion-content>
