--- a/client/src/index.html
+++ b/client/src/index.html
@@ -15,7 +15,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
-  <script src="https://maps.google.com/maps/api/js?key=AIzaSyAJRv2i86sqb-gB_njq7b6WAS20zAjIfTA"></script>
+  <script src="https://maps.google.com/maps/api/js?key=AIzaSyCZ4hdWk-GyAV8GjEgakqNsXsZq4jmR3Gs&libraries=places"></script>
   <script src="cordova.js"></script>
 
   <!--
