--- a/client/src/pages/settings/location-edit.html
+++ b/client/src/pages/settings/location-edit.html
@@ -5,9 +5,14 @@
 </ion-header>
 <ion-content padding>
     <div #map id="map" width="100%" height="200px"></div>
+    <ion-list *ngIf="addressPredictions">
+        <button *ngFor="let address of addressPredictions" ion-item (click)="setAddress(address.description)">
+            {{address.description}}
+        </button> 
+    </ion-list>
     <ion-item>
         <ion-label stacked>Address</ion-label>
-        <ion-input [(ngModel)]="address" (keyup)="updateLatLng()"></ion-input>
+        <ion-input [(ngModel)]="address" (keyup)="showPredictions()"></ion-input>
     </ion-item>
     <ion-item>
         <ion-label stacked>Type of location</ion-label>
