--- a/client/src/pages/settings/locations.html
+++ b/client/src/pages/settings/locations.html
@@ -7,10 +7,11 @@
     <h2>Where do you live and work?</h2>
     <p>Heartsteps will use these locations to customize suggestions for physical activity nearby.</p>
     <ion-list>
-        <ion-item *ngFor="let location of locations" (click)="editLocation(location)">
+        <ion-item *ngFor="let location of locations" (click)="editLocation(location)" (ngClass)="{invalid:location.invalid}">
             {{location.address}}
+            <em>{{location.type}}</em>
         </ion-item>
+        <button ion-item (click)="newLocation()">Add Location</button>
     </ion-list>
-    <button ion-button outline (click)="newLocation()">Add Location</button>
     <button ion-button (click)="saveLocations()">Save Locations</button>
 </ion-content>
