--- a/client/src/pages/settings/location-edit.html
+++ b/client/src/pages/settings/location-edit.html
@@ -4,7 +4,14 @@
     </ion-navbar>
 </ion-header>
 <ion-content padding>
-    <div #map id="map" width="100%" height="200px"></div>
+    <ion-item>
+        <ion-label stacked>Type of location</ion-label>
+        <ion-select [(ngModel)]="type">
+            <ion-option value="home">Home</ion-option>
+            <ion-option value="work">Work</ion-option>
+            <ion-option value="other">Other</ion-option>
+        </ion-select>
+    </ion-item>
     <ion-list *ngIf="addressPredictions">
         <button *ngFor="let address of addressPredictions" ion-item (click)="setAddress(address.description)">
             {{address.description}}
@@ -14,13 +21,7 @@
         <ion-label stacked>Address</ion-label>
         <ion-input [(ngModel)]="address" (keyup)="showPredictions()"></ion-input>
     </ion-item>
-    <ion-item>
-        <ion-label stacked>Type of location</ion-label>
-        <ion-select [(ngModel)]="type">
-            <ion-option value="home">Home</ion-option>
-            <ion-option value="work">Work</ion-option>
-            <ion-option value="other">Other</ion-option>
-        </ion-select>
-    </ion-item>
-    <button ion-button (click)="update()" >Update</button>
+    <div #map id="map" width="100%" height="200px"></div>
+    <button ion-button color="danger" (click)="delete()">Delete</button>
+    <button ion-button (click)="update()" >Save</button>
 </ion-content>
