Remove ionic-content from welcome screen

--- a/client/src/pages/welcome/welcome.html
+++ b/client/src/pages/welcome/welcome.html
@@ -1,7 +1,3 @@
-<ion-content class="alternate-background" padding>
-  <h1>Welcome!</h1>
-  <p>Enroll to create your account and get started.</p>
-  <button (click)="goToEnrollPage()">
-      Enroll
-  </button>
-</ion-content>
+<h1>Welcome!</h1>
+<p>Enroll to create your account and get started.</p>
+<button (click)="goToEnrollPage()">Enroll</button>
