--- a/client/src/pages/places/places-list.html
+++ b/client/src/pages/places/places-list.html
@@ -1,17 +1,17 @@
 <ion-header>
     <ion-navbar>
-        <ion-title>Locations</ion-title>
+        <ion-title>Places</ion-title>
     </ion-navbar>
 </ion-header>
 <ion-content padding>
     <h2>Where do you live and work?</h2>
-    <p>Heartsteps will use these locations to customize suggestions for physical activity nearby.</p>
+    <p>Heartsteps will use these places to customize suggestions for physical activity nearby.</p>
     <ion-list>
         <ion-item *ngFor="let location of locations" (click)="editLocation(location)" (ngClass)="{invalid:location.invalid}">
             {{location.address}}
             <em>{{location.type}}</em>
         </ion-item>
-        <button ion-item (click)="newLocation()">Add Location</button>
+        <button ion-item (click)="newLocation()">Add Place</button>
     </ion-list>
-    <button ion-button (click)="saveLocations()">Save Locations</button>
+    <button ion-button (click)="saveLocations()">Save</button>
 </ion-content>
