--- a/client/src/pages/settings/participant-information.html
+++ b/client/src/pages/settings/participant-information.html
@@ -3,13 +3,13 @@
         <ion-title>Basic Information</ion-title>
     </ion-navbar>
 </ion-header>
-<ion-content padding>
-    <form>
+<ion-content *ngIf="contactInformationForm" padding>
+    <form [formGroup]="contactInformationForm">
         <fieldset>
             <legend>What do you want to be called?</legend>
             <ion-item>
                 <ion-label stacked for="participant-name">First name or nickname</ion-label>
-                <ion-input id="participant-name" type="text" ></ion-input>
+                <ion-input id="participant-name" formControlName="name" type="text" ></ion-input>
             </ion-item>
         </fieldset>
         <fieldset>
@@ -17,11 +17,11 @@
             <p>The study team will use this information to contact you only during the study.</p>
             <ion-item>
                 <ion-label stacked for="participant-email">Email</ion-label>
-                <ion-input id="participant-email" type="email"></ion-input>
+                <ion-input id="participant-email" formControlName="email" type="email"></ion-input>
             </ion-item>
             <ion-item>
                 <ion-label stacked for="participant-phone">Phone</ion-label>
-                <ion-input id="participant-phone" type="text"></ion-input>
+                <ion-input id="participant-phone" formControlName="phone" type="tel"></ion-input>
             </ion-item>
         </fieldset>
         <button ion-button (click)="save()">Save</button>
