Added plan modal and stubbed plan adding sequence

--- a/client/src/pages/enroll/enroll.html
+++ b/client/src/pages/enroll/enroll.html
@@ -15,6 +15,6 @@
       <ion-input type="text" formControlName="entryToken"></ion-input>
     </ion-item>
     <p *ngIf="error" class="error">The entry token you entered has either already been enrolled or isn't correct.</p>
-    <button>Enroll</button>
+    <button ion-button outline block>Enroll</button>
   </form>
 </ion-content>
