--- a/client/src/pages/welcome/welcome.html
+++ b/client/src/pages/welcome/welcome.html
@@ -1,3 +1,6 @@
+<div class="heartsteps-logo">Heartsteps</div>
 <h1>Welcome!</h1>
-<p>Enroll to create your account and get started.</p>
-<button (click)="goToEnrollPage()">Enroll</button>
+<div class="controls">
+    <p>Enroll to create your account and get started.</p>
+    <button (click)="goToEnrollPage()">Enroll</button>
+</div>
