--- a/client/src/pages/onboard/fitbit-app.html
+++ b/client/src/pages/onboard/fitbit-app.html
@@ -5,5 +5,5 @@
     </ion-header>
     <ion-content padding>
         <p>Install the HeartSteps FitBit application.</p>
-        <button ion-button (click)="checkConnection()">Check connection</button>
+        <button class="heartsteps-primary-button" (click)="checkConnection()">Check connection</button>
     </ion-content>
