--- a/client/src/pages/onboard/location-permission.html
+++ b/client/src/pages/onboard/location-permission.html
@@ -5,5 +5,5 @@
 </ion-header>
 <ion-content padding>
     <p>HeartSteps will need access to your phone's location, so messages can be tailored to your current location.</p>
-    <button ion-button (click)="getPermission()">Enable</button>
+    <button class="heartsteps-primary-button" (click)="getPermission()">Enable</button>
 </ion-content>
