--- a/client/src/pages/onboard/notifications.html
+++ b/client/src/pages/onboard/notifications.html
@@ -5,5 +5,5 @@
 </ion-header>
 <ion-content padding>
     <p>Allow notifications so HeartSteps can send you activity suggestions and reminders.</p>
-    <button ion-button (click)="getPermission()">Enable</button>
+    <button class="heartsteps-primary-button" (click)="getPermission()">Enable</button>
 </ion-content>
