--- a/client/src/pages/settings/activity-suggestion-times.html
+++ b/client/src/pages/settings/activity-suggestion-times.html
@@ -5,14 +5,18 @@
 </ion-header>
 
 <ion-content padding>
-    <p>Enter times of day when you might recieve an activity suggestion.</p>
-    <div *ngIf="timesForm">
-        <form [formGroup]="timesForm">
-            <ion-item *ngFor="let time of timeFields">
-                <ion-label>{{time.name}}</ion-label>
-                <ion-datetime formControlName="{{time.key}}" displayFormat="h:mm a" minuteValues="0,30"></ion-datetime>
-            </ion-item>
-            <button ion-button (click)="updateTimes()">Save</button>
-        </form>
-    </div>
+    <form>
+        <p>Enter times of day when you might recieve an activity suggestion.</p>
+        <div *ngIf="timesForm">
+            <div [formGroup]="timesForm">
+                <ion-item *ngFor="let time of timeFields">
+                    <ion-label>{{time.name}}</ion-label>
+                    <ion-datetime formControlName="{{time.key}}" displayFormat="h:mm a" minuteValues="0,30"></ion-datetime>
+                </ion-item>
+            </div>
+        </div>
+        <div class="controls">
+            <button (click)="updateTimes()">Save</button>
+        </div>
+    </form>
 </ion-content>
