--- a/client/src/pages/settings/participant-information.html
+++ b/client/src/pages/settings/participant-information.html
@@ -24,6 +24,8 @@
                 <ion-input id="participant-phone" formControlName="phone" type="tel"></ion-input>
             </ion-item>
         </fieldset>
-        <button ion-button (click)="save()">Save</button>
+        <div class="controls">
+            <button (click)="save()">Save</button>
+        </div>
     </form>
 </ion-content>
