--- a/client/src/pages/settings/weekly-reflection-time.page.html
+++ b/client/src/pages/settings/weekly-reflection-time.page.html
@@ -11,8 +11,8 @@
             <ion-label>Time</ion-label>
             <ion-datetime formControlName="time" displayFormat="h:mm a" minuteValues="0,30"></ion-datetime>
         </ion-item>
-        <div class="actions">
-            <button ion-button outline block (click)="save()">Save</button>
+        <div class="controls">
+            <button (click)="save()">Save</button>
         </div>
     </form>
 </ion-content>
