--- a/client/src/pages/onboard/fitbit-auth.html
+++ b/client/src/pages/onboard/fitbit-auth.html
@@ -5,5 +5,5 @@
 </ion-header>
 <ion-content padding>
     <p>Connect your FitBit with HeartSteps to track your physical activity.</p>
-    <button ion-button (click)="getAuthorization()">Connect to FitBit</button>
+    <button class="heartsteps-primary-button" (click)="getAuthorization()">Connect to FitBit</button>
 </ion-content>
