--- a/client/src/pages/places/places-list.html
+++ b/client/src/pages/places/places-list.html
@@ -4,15 +4,19 @@
     </ion-navbar>
 </ion-header>
 <ion-content padding>
-    <h2>Where do you live and work?</h2>
-    <p>Heartsteps will use these places to customize suggestions for physical activity nearby.</p>
-    <ion-list>
-        <ion-item *ngFor="let location of locations" (click)="editLocation(location)" (ngClass)="{invalid:location.invalid}">
-            {{location.address}}
-            <em>{{location.type}}</em>
-        </ion-item>
-        <button ion-item (click)="newLocation()">Add Place</button>
-    </ion-list>
-    <p *ngIf="errorMessage" class="error">{{errorMessage}}</p>
-    <button ion-button (click)="saveLocations()">Save</button>
+    <form>
+        <h2>Where do you live and work?</h2>
+        <p>Heartsteps will use these places to customize suggestions for physical activity nearby.</p>
+        <ion-list>
+            <ion-item *ngFor="let location of locations" (click)="editLocation(location)" (ngClass)="{invalid:location.invalid}">
+                {{location.address}}
+                <em>{{location.type}}</em>
+            </ion-item>
+            <button ion-item (click)="newLocation()">Add Place</button>
+        </ion-list>
+        <div class="controls">
+            <p *ngIf="errorMessage" class="error">{{errorMessage}}</p>
+            <button (click)="saveLocations()">Save</button>
+        </div>
+    </form>
 </ion-content>
