Add daily summary to dashboard

--- a/client/src/pages/dashboard/dashboard.html
+++ b/client/src/pages/dashboard/dashboard.html
@@ -2,7 +2,7 @@
     <ion-card >
         <ion-card-header>My progress</ion-card-header>
         <ion-card-content>
-            <p>Current progress goes here</p>
+            <heartsteps-activity-daily-summary></heartsteps-activity-daily-summary>
         </ion-card-content>
     </ion-card>
 </ion-content>
