Changed error message on enrollment page

--- a/client/src/pages/enroll/enroll.html
+++ b/client/src/pages/enroll/enroll.html
@@ -19,7 +19,7 @@
       <ion-input type="number" formControlName="birthYear"></ion-input>
     </ion-item>
     <div class="controls">
-        <p *ngIf="error" class="error">The entry token you entered has either already been enrolled or isn't correct.</p>
+        <p *ngIf="error" class="error">The entry token you entered is incorrect.</p>
         <button >Enroll</button>
     </div>
   </form>
