Add static chart made with d3

--- a/client/src/pages/dashboard/dashboard.html
+++ b/client/src/pages/dashboard/dashboard.html
@@ -2,6 +2,7 @@
     <ion-card >
         <ion-card-header>My progress</ion-card-header>
         <ion-card-content>
+            <heartsteps-weekly-progress></heartsteps-weekly-progress>
             <heartsteps-activity-daily-summary></heartsteps-activity-daily-summary>
         </ion-card-content>
     </ion-card>
