--- a/client/src/heartsteps/activity/daily-summary.html
+++ b/client/src/heartsteps/activity/daily-summary.html
@@ -1,8 +1,8 @@
 <h3>{{formattedDate}}</h3>
 <div class="callout-progress" *ngIf="activitySummary">{{activitySummary.totalMinutes}} minutes</div>
 <ul class="horizontal" *ngIf="activitySummary">
-    <li>{{activitySummary.moderateMinutes}} min <em>Moderate</em></li>
-    <li>{{activitySummary.vigorousMinutes}} min <em>Vigerous</em></li>
-    <li>{{activitySummary.totalSteps}} <em>Steps</em></li>
-    <li>{{activitySummary.totalMiles}} <em>Miles</em></li>
+    <li>{{activitySummary.moderateMinutes}} min <span>Moderate</span></li>
+    <li>{{activitySummary.vigorousMinutes}} min <span>Vigerous</span></li>
+    <li>{{activitySummary.totalSteps}} <span>Steps</span></li>
+    <li>{{activitySummary.totalMiles}} <span>Miles</span></li>
 </ul>
