Integrate client with server api changes

--- a/client/src/heartsteps/activity/weekly-progress.html
+++ b/client/src/heartsteps/activity/weekly-progress.html
@@ -1,5 +1,5 @@
 <p class="heartsteps-weekly-progress-insert">
     <span class="title">This week</span>
-    <span class="metric"><em>{{complete}}</em>/{{goal}}</span>
+    <span class="metric"><em>{{complete}}</em>/{{total}}</span>
     <span class="label">min</span>
 </p>
