Created single service for daily summaires

--- a/client/src/heartsteps/activity/weekly-progress.html
+++ b/client/src/heartsteps/activity/weekly-progress.html
@@ -1,4 +1,4 @@
-<p class="heartsteps-weekly-progress-insert">
+<p class="progress-insert">
     <span class="title">This week</span>
     <span class="metric"><em>{{complete}}</em>/{{total}}</span>
     <span class="label">min</span>
