--- a/client/src/heartsteps/activity/daily-summary.html
+++ b/client/src/heartsteps/activity/daily-summary.html
@@ -6,3 +6,7 @@
     <li>{{activitySummary.totalSteps}} <span>Steps</span></li>
     <li>{{activitySummary.totalMiles}} <span>Miles</span></li>
 </ul>
+<div class="last-updated" *ngIf="updatedDate">
+    <p>Last updated <em>{{updatedDate}}</em></p>
+    <button class="refresh" (click)="refresh()">Refresh</button>
+</div>
