--- a/client/src/index.html
+++ b/client/src/index.html
@@ -10,6 +10,8 @@
   <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#4e8ef7">
+  
+  <base href="/">
 
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -18,15 +20,6 @@
   <script src="https://maps.google.com/maps/api/js?key=AIzaSyCZ4hdWk-GyAV8GjEgakqNsXsZq4jmR3Gs&libraries=places"></script>
   <script src="cordova.js"></script>
 
-  <!--
-  <script>
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('service-worker.js')
-        .then(() => console.log('service worker installed'))
-        .catch(err => console.error('Error', err));
-    }
-  </script>
-  -->
   <link href="build/main.css" rel="stylesheet">
 
 </head>
