--- a/client/src/pages/home/home.html
+++ b/client/src/pages/home/home.html
@@ -1,6 +1,9 @@
-<ion-tabs>
-    <ion-tab tabIcon="podium" [root]="dashboard"></ion-tab>
-    <ion-tab tabIcon="calendar" [root]="plan"></ion-tab>
-    <ion-tab tabIcon="trending-up" [root]="activityLog"></ion-tab>
-    <ion-tab tabIcon="book" [root]="resourceLibrary"></ion-tab>
-</ion-tabs>
+<header>
+    <h2>{{pageTitle}}</h2>
+</header>
+<div>
+    <router-outlet></router-outlet>
+</div>
+<nav>
+    <a *ngFor="let tab of tabs" class="{{tab.key}}" routerLink="/home/{{tab.key}}" routerLinkActive="active" >{{tab.name}}</a>
+</nav>
