Added basic settings page with child pages

--- a/client/src/pages/home/home.html
+++ b/client/src/pages/home/home.html
@@ -1,5 +1,6 @@
 <header>
     <h2>{{pageTitle}}</h2>
+    <a class="settings" routerLink="/settings">Settings</a>
 </header>
 <div>
     <router-outlet></router-outlet>
