--- a/client/src/pages/dashboard/dashboard.html
+++ b/client/src/pages/dashboard/dashboard.html
@@ -1,7 +1,7 @@
-<ion-card >
-    <ion-card-header>My progress</ion-card-header>
-    <ion-card-content>
-        <heartsteps-weekly-progress></heartsteps-weekly-progress>
-        <heartsteps-activity-daily-summary></heartsteps-activity-daily-summary>
-    </ion-card-content>
-</ion-card>
+<article>
+    <header>
+        <h3>My progress</h3>
+    </header>
+    <heartsteps-weekly-progress></heartsteps-weekly-progress>
+    <heartsteps-activity-daily-summary></heartsteps-activity-daily-summary>
+</article>
