--- a/client/src/pages/settings/reflection-time-page.html
+++ b/client/src/pages/settings/reflection-time-page.html
@@ -1,5 +1,7 @@
-<header>
-    <h2>Weekly Reflection Time</h2>
-    <a class="back" (click)="goBack()">Back</a>
-</header>
-<weekly-reflection-time (saved)="goBack()"></weekly-reflection-time>
+<article class="page">
+    <header>
+        <h2>Weekly Reflection Time</h2>
+        <a class="back" (click)="goBack()">Back</a>
+    </header>
+    <weekly-reflection-time (saved)="goBack()"></weekly-reflection-time>
+</article>
