--- a/client/src/pages/settings/settings-page.html
+++ b/client/src/pages/settings/settings-page.html
@@ -1,20 +1,20 @@
-<header>
-    <h2>Settings Page</h2>
-    <a class="back" routerLink="/">Back</a>
-</header>
-<nav>
-    <ul>
-        <li>
-            <a routerLink="/settings/contact">Contact information</a> 
-        </li>
-        <li>
-            <a routerLink="/settings/places">My locations</a> 
-        </li>
-        <li>
-            <a routerLink="/settings/reflection-time">Weekly reflection time</a> 
-        </li>
-        <li>
-            <a routerLink="/settings/suggestion-times">Activity suggestion time</a> 
-        </li>
-    </ul>
-</nav>
+<div class="page">
+    <header>
+        <h2>Settings Page</h2>
+        <a class="back" routerLink="/">Back</a>
+    </header>
+    <div>
+        <article>
+            <a routerLink="/settings/contact">Contact information</a>
+        </article>
+        <article>
+            <a routerLink="/settings/places">My locations</a>
+        </article> 
+        <article>
+            <a routerLink="/settings/reflection-time">Weekly reflection time</a>
+        </article> 
+        <article>
+            <a routerLink="/settings/suggestion-times">Activity suggestion time</a>
+        </article>
+    </div>
+</div>
