--- a/client/src/pages/settings/suggestion-times.html
+++ b/client/src/pages/settings/suggestion-times.html
@@ -1,5 +1,7 @@
-<header>
-    <h2>Suggestion Times</h2>
-    <a class="back" (click)="goBack()">Back</a>
-</header>
-<heartsteps-activity-suggestion-times (saved)="goBack()"></heartsteps-activity-suggestion-times>
+<article class="page">
+    <header>
+        <h2>Suggestion Times</h2>
+        <a class="back" (click)="goBack()">Back</a>
+    </header>
+    <heartsteps-activity-suggestion-times (saved)="goBack()"></heartsteps-activity-suggestion-times>
+</article>
