--- a/client/src/pages/activity-plan/plan.page.html
+++ b/client/src/pages/activity-plan/plan.page.html
@@ -1,6 +1,4 @@
-<ion-card *ngFor="let date of dates" >
-    <ion-card-content>
-        <activity-plan-day [date]="date"></activity-plan-day>
-        <button ion-button block clear (click)="addActivity(date)" >Add an activity</button>
-    </ion-card-content>
-</ion-card>
+<article *ngFor="let date of dates">
+    <activity-plan-day [date]="date"></activity-plan-day>
+    <button ion-button block clear (click)="addActivity(date)" >Add an activity</button>
+</article>
